--- a/ADO.Practice/ADO.Practice/ADO.Practice.csproj
+++ b/ADO.Practice/ADO.Practice/ADO.Practice.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DbHelper.cs" />
+    <Compile Include="Entities\Employee.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
